etc/kubernetes/manifests/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: dc-latest
  resourceVersion:
  selflink: 
  uid: 
  managedfield: []
  # namespace: katmandu25-santander-phpinfo Lo quitamos porque asi no falla al importarlo desde otro proyecto.
spec:
  replicas: 2
  selector:
    app: santander-phpinfo
  template:
    metadata:
    #  name: hello-openshift  Este nombre lo elige de forma aleatoria. No vale.
      labels:
        app: santander-phpinfo
      creationTimestamp: null
    spec:
      containers:
        - name: php
          image: 'index.docker.io/katmandu25/santander-phpinfo:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:  # Si no lo configuramos nos pueden machacar el contenedor
            limits:
              cpu: 20m
              memory: 20M
            requests:
              cpu: 20m
              memory: 20M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always  # Afecta al POD
      securityContext: {}
      schedulerName: default-scheduler
status: {}
