etc/kubernetes/manifests/santander-phpinfo-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: santander-phpinfo-dc
spec:
  replicas: 2
  selector:
    app: santander-phpinfo-dc
  template:
    metadata:
      labels:
        app: santander-phpinfo-dc
    spec:
      containers:
        - 
          args: 
            - -f
            - index.php
            - -S
            - 0.0.0.0:8080
          command: 
            - php
          image: index.docker.io/barsanse/santander-phpinfo:latest
          name: santander-phpinfo-dc-container
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: docker-login
